<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dialog_size"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:elevation="2dp"
    android:translationZ="2dp"
    android:padding="@dimen/fab_margin"
    tools:context=".dialog.CreateAlbumDialog">

    <TextView
        android:gravity="center"
        style="@style/Album.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_album_name" />

    <android.support.design.widget.TextInputLayout
        android:hint="@string/new_album_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_album_name"
            android:paddingHorizontal="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <Button
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/add"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/add"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>