<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_photo_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewPhoto"
    android:background="@drawable/transition_view_photo"
    tools:showIn="@layout/activity_view_photo">

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/viewControl"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="0dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:gravity="center"
        app:alignItems="center"
        app:justifyContent="space_around"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/view_share"
            android:backgroundTint="@android:color/black"
            android:background="@drawable/ic_share_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/view_edit"
            android:backgroundTint="@android:color/black"
            android:background="@drawable/ic_edit_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/view_love"
            android:backgroundTint="@android:color/black"
            android:background="@drawable/ic_love_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/view_delete"
            android:backgroundTint="@android:color/black"
            android:background="@drawable/ic_delete_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </com.google.android.flexbox.FlexboxLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/editControl"
        android:translationY="70dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="0dp"
        app:tabTextColor="@android:color/white"
        app:tabIconTint="@android:color/white"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.design.widget.TabItem
            android:id="@+id/edit_crop"
            android:icon="@drawable/ic_crop_white"
            android:text="@string/crop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <android.support.design.widget.TabItem
            android:id="@+id/edit_rotate"
            android:icon="@drawable/ic_rotate_white"
            android:text="@string/rotate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <android.support.design.widget.TabItem
            android:id="@+id/edit_mirror"
            android:icon="@drawable/ic_flip_white"
            android:text="@string/mirror"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </android.support.design.widget.TabLayout>


</android.support.constraint.ConstraintLayout>